[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "reg-rsparser"
version = "0.1.0"
description = "High-performance Windows Registry hive parser with Python bindings"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
authors = [
    { name = "Registry Parser Team", email = "registry-parser@example.com" }
]
keywords = ["registry", "windows", "forensics", "parser", "hive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/ac-rn/reg-parser"
Repository = "https://github.com/ac-rn/reg-parser"
Documentation = "https://github.com/ac-rn/reg-parser/blob/main/python/README.md"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "reg_rsparser"
